// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<Fragment>
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error="Index pattern does not contain any geospatial fields"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={true}
    label="Index pattern"
    labelType="label"
  >
    <MockIndexPatternSelect
      indexPatternId="indexPatternId"
      isClearable={false}
      isDisabled={false}
      isInvalid={true}
      onChange={[Function]}
      onNoIndexPatterns={[Function]}
      placeholder="Select index pattern"
    />
  </EuiFormRow>
</Fragment>
`;

exports[`should render no index pattern warning when there are no matching index patterns 1`] = `
<Fragment>
  <EuiCallOut
    color="warning"
    title="Couldn't find any index patterns"
  >
    <p>
      <FormattedMessage
        defaultMessage="You'll need to "
        id="xpack.maps.noIndexPattern.doThisPrefixDescription"
        values={Object {}}
      />
      <EuiLink
        href="abc//app/management/kibana/indexPatterns"
      >
        <FormattedMessage
          defaultMessage="Create an index pattern."
          id="xpack.maps.noIndexPattern.doThisLinkTextDescription"
          values={Object {}}
        />
      </EuiLink>
    </p>
    <p>
      <FormattedMessage
        defaultMessage="Don't have any data? "
        id="xpack.maps.noIndexPattern.hintDescription"
        values={Object {}}
      />
      <EuiLink
        href="abc//app/home#/tutorial_directory/sampleData"
      >
        <FormattedMessage
          defaultMessage="Get started with some sample data sets."
          id="xpack.maps.noIndexPattern.getStartedLinkText"
          values={Object {}}
        />
      </EuiLink>
    </p>
  </EuiCallOut>
  <EuiSpacer
    size="s"
  />
  <EuiFormRow
    describedByIds={Array []}
    display="row"
    error="Index pattern does not contain any geospatial fields"
    fullWidth={false}
    hasChildLabel={true}
    hasEmptyLabelSpace={false}
    isInvalid={true}
    label="Index pattern"
    labelType="label"
  >
    <MockIndexPatternSelect
      indexPatternId="indexPatternId"
      isClearable={false}
      isDisabled={true}
      isInvalid={true}
      onChange={[Function]}
      onNoIndexPatterns={[Function]}
      placeholder="Select index pattern"
    />
  </EuiFormRow>
</Fragment>
`;
